# advent-of-code-2024

./: .gitignore
day-01/: CMakeLists.txt  README.md  include.hpp
day-01/part-01/: CMakeLists.txt  README.md
day-01/part-01/src/: main.cpp
day-01/part-02/: CMakeLists.txt  README.md
day-01/part-02/src/: main.cpp
day-01/src/: main.cpp
day-02/part-01/: Cargo.toml  README.md
day-02/part-01/src/: main.rs
lib/rust-filereader/src/: lib.rs
